try to fix info hover state on mobile

--- a/assets/css/artdirected/elyxel.scss
+++ b/assets/css/artdirected/elyxel.scss
@@ -222,6 +222,9 @@ code {
   position: relative;
   cursor: pointer;
   color: var(--light-color);
+  border: none;
+  border-radius: 0;
+  background: none;
 }
 
 .info::before,
@@ -248,6 +251,7 @@ code {
 .info:focus::before,
 .info:focus::after  {
   opacity: 1;
+  outline: 0;
 }
 
 @keyframes rainbow {
